<resources>
    <string name="strNameApp">Aleppo Collage</string>
    <string name="strRegisterStudent">تسجيل الطالب</string>
    <string name="strRegisterTeacher">تسجيل الأستاذ</string>
    <string name="strNameCollage">معهد حلب العلمي</string>
    <string name="strNameStudent">اسم الطالب</string>
    <string name="strPassword">كلمة المرور</string>
    <string name="strRegister">تسجيل الدخول</string>
    <string name="strTest">المذاكرات</string>
    <string name="strMark">العلامات</string>
    <string name="strAbsence">الحضور</string>
    <string name="strPayment">الدفعات</string>
    <string name="strNotifications">الاشعارات</string>
    <string name="aaa">نظام معلوماتي لإدارة مدرسة</string>
    <string name="strYear">العام الدراسي</string>
    <string name="strDepartment">الفئة</string>
    <string name="strRecordTest">سجل المذاكرات</string>
    <string name="strNameTeacher">اسم الأستاذ</string>
    <string name="strRemainingAmount">المبلغ المتبقي</string>
    <string name="strPaidAmount">المبلغ المدفوع</string>
    <string name="strTotalAmount">المبلغ الكامل</string>
    <string name="strDatePayment">تاريخ الدفعة :</string>
    <string name="strEnterDateToday">ادخل تاريخ اليوم</string>
    <string name="strLogin">دخول</string>
    <string name="strStartTime">بداية الدوام</string>
    <string name="strFirstSession">الحصة الأولى</string>
    <string name="strSecondSession">الحصة الثانية</string>
    <string name="strThirdSession">الحصة الثالثة</string>
    <string name="strFourthSession">الحصة الرابعة</string>
    <string name="strFifthSession">الحصة الخامسة</string>
    <string name="strSixthSession">الحصة السادسة</string>
    <string name="strSeventhSession">الحصة السابعة</string>
    <string name="strEightSession">الحصة الثامنة</string>
    <string name="strFinishTime">نهاية الدوام</string>
    <string name="strChooseDate">اختر التاريخ</string>
    <string name="strChoose">اختر</string>
    <string name="strPleaseEnterPassword">من فضلك ادخل كلمة المرور</string>
    <string name="strWrongPassword">خطأ بكلمة المرور</string>
    <string name="strPleaseEnterName">من فضلك ادخل الاسم</string>
    <string name="strPleaseEnterDate">    من فضلك اختر التاريخ اولاً</string>
    <string name="strGroupStudent">الفئة</string>
    <string name="strNote">ملاحظات</string>
    <string name="strWriteNoteHere">اكتب ملاحظات هنا</string>
    <string name="strServerDown">لا يمكن الاتصال بالسرفر</string>
    <string name="strNoGroups">لا يوجد فئات</string>
    <string name="strLoading">جاري التحميل</string>
    <string name="strPleaseWaite">انتظر من فضلك</string>
    <string name="strNameSubject">اسم المادة:</string>
    <string name="strSave">حفظ السجل</string>
    <string name="strOk">موافق</string>

    <string name="strJanuary">كانون</string>
    <string name="strFebruary">شباط</string>
    <string name="strMarch">آذار</string>
    <string name="strApril">نيسان</string>
    <string name="strMay">أيار</string>
    <string name="strJune">حزيران</string>
    <string name="strJuly">تموز</string>
    <string name="strAugust">آب</string>
    <string name="strSeptember">أيلول</string>
    <string name="strOctober">تشرين</string>
    <string name="strNovember">تشرين</string>
    <string name="strDecember">كانون</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strThereIsProblem">يوجد مشكلة بالاتصال بالسيرفر</string>
    <string name="strShouldSelectYearAndGroup">يجب تحديد المجموعة والسنة</string>
    <string name="strNoPermissionForTeacher">هذه ليست من صلاحيات الأستاذ</string>
    <string name="strEnterMark">أدخل العلامات</string>
    <string name="strEnterTopMark">أخل العلامة التامة</string>
    <string name="strDescription">الوصف</string>
    <string name="strNotFoundData">لا يوجد بيانات</string>
    <string name="strPleaseChooseTeacher">يجب تحديد الأستاذ أولاً</string>
    <string name="strHome">الرئيسية</string>
    <string name="strLogout">تسجيل خروج</string>
</resources>