<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:fillViewport="true"    tools:context=".ui.auth.login.student.RegisterStudentFragment">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1.5"            android:background="@drawable/bg_register_student_teacher">            <RelativeLayout                android:id="@+id/relativeRegisterStudentNameCollage"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_alignParentStart="true"                android:layout_alignParentTop="true"                android:layout_alignParentEnd="true"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd">                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_centerInParent="true"                    android:fontFamily="@font/cairo_black"                    android:text="@string/strNameCollage"                    android:textColor="@color/colorWhite"                    android:textSize="@dimen/dmTextSizeTitleRegisterStudent" />                <ImageButton                    android:id="@+id/btnRegisterStudentBack"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignParentStart="true"                    android:layout_centerInParent="true"                    android:background="@drawable/ic_back"                    android:elevation="@dimen/dmElevationButton" />            </RelativeLayout>            <TextView                android:id="@+id/textView"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/relativeRegisterStudentNameCollage"                android:layout_centerHorizontal="true"                android:layout_marginBottom="@dimen/dmMarginBottomTextTitleRegisterStudent"                android:fontFamily="@font/cairo_black"                android:text="@string/strNameApp"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeTitleRegisterStudent" />            <ImageView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_below="@+id/textView"                android:layout_alignParentBottom="true"                android:layout_centerHorizontal="true"                android:adjustViewBounds="true"                android:scaleType="fitEnd"                android:src="@drawable/ic_boy" />        </RelativeLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="vertical">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="start"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd"                android:layout_marginBottom="@dimen/dmMarginEnd"                android:fontFamily="@font/cairo_bold"                android:text="@string/strRegisterStudent"                android:textColor="@color/colorPurpleText"                android:textSize="@dimen/dmTextSizeTitleRegisterStudent" />            <EditText                android:id="@+id/edtRegisterStudentName"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginEnd="@dimen/dmMarginEnd"                android:layout_marginBottom="@dimen/dmHalfMarginBottom"                android:background="@drawable/bg_edit_text_border"                android:elevation="@dimen/dmElevationRegisterStudentEditText"                android:fontFamily="@font/cairo_regular"                android:hint="@string/strNameStudent"                android:inputType="text"                android:paddingStart="@dimen/dmPaddingStartRegisterStudentEditText"                android:paddingEnd="@dimen/dmPaddingEndRegisterStudentEditText" />            <RelativeLayout                android:layout_width="match_parent"                android:layout_height="wrap_content">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content">                    <EditText                        android:id="@+id/edtRegisterStudentPassword"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_centerVertical="true"                        android:layout_marginStart="@dimen/dmMarginStart"                        android:layout_marginEnd="@dimen/dmMarginEnd"                        android:layout_marginBottom="@dimen/dmMarginBottom"                        android:background="@drawable/bg_edit_text_border"                        android:elevation="2dp"                        android:fontFamily="@font/cairo_regular"                        android:gravity="right|center_vertical"                        android:hint="@string/strPassword"                        android:inputType="textWebPassword"                        android:paddingStart="18dp"                        android:paddingEnd="18dp" />                </RelativeLayout>                <ImageButton                    android:id="@+id/imgRegisterStudentShowPassword"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_centerVertical="true"                    android:layout_alignParentEnd="true"                    android:layout_marginEnd="30dp"                    android:background="@drawable/ic_visibility_off" />            </RelativeLayout>            <Button                android:id="@+id/btnRegisterStudentLogin"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd"                android:background="@drawable/bg_button_sign_in_purple"                android:elevation="@dimen/dmElevationButton"                android:fontFamily="@font/cairo_bold"                android:text="@string/strRegister"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeButton" />            <com.wang.avi.AVLoadingIndicatorView                android:id="@+id/aviRegisterStudent"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_gravity="center_horizontal"                app:indicatorColor="@color/colorPrimary"                app:indicatorName="BallSpinFadeLoaderIndicator"                android:layout_marginBottom="@dimen/dmMarginBottom"                android:visibility="gone"/>        </LinearLayout>    </LinearLayout></ScrollView>