<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@drawable/bg_register"    android:fillViewport="true"    tools:context=".ui.auth.register.RegisterFragment">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:id="@+id/linearNameCollage"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:gravity="center"            android:orientation="vertical"            app:layout_constraintBottom_toTopOf="@+id/relativeRegisterStudent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/cairo_black"                android:text="@string/strNameCollage"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeTitleRegister" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:fontFamily="@font/cairo_black"                android:text="@string/strNameApp"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeTitleRegister" />        </LinearLayout>        <RelativeLayout            android:id="@+id/relativeRegisterStudent"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:layout_constraintBottom_toTopOf="@+id/relativeRegisterTeacher"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/linearNameCollage">            <ImageView                android:id="@+id/imgRegisterStudent"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerHorizontal="true"                android:src="@drawable/ic_register_student" />            <Button                android:id="@+id/btnRegisterStudent"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/imgRegisterStudent"                android:layout_centerHorizontal="true"                android:layout_marginTop="@dimen/dmMarginTopButtonRegister"                android:background="@drawable/bg_button_sign_in"                android:elevation="@dimen/dmElevationButton"                android:fontFamily="@font/cairo_black"                android:paddingStart="@dimen/dmPaddingStartButtonRegister"                android:paddingEnd="@dimen/dmPaddingEndButtonRegister"                android:text="@string/strRegisterStudent"                android:textColor="@color/colorPrimary"                android:textSize="@dimen/dmTextSizeButton"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent" />        </RelativeLayout>        <RelativeLayout            android:id="@+id/relativeRegisterTeacher"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/relativeRegisterStudent">            <ImageView                android:id="@+id/imgRegisterTeacher"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerHorizontal="true"                android:src="@drawable/ic_register_teacher" />            <Button                android:id="@+id/btnRegisterTeacher"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/imgRegisterTeacher"                android:layout_centerHorizontal="true"                android:layout_marginTop="@dimen/dmMarginTopButtonRegister"                android:background="@drawable/bg_button_sign_in"                android:elevation="@dimen/dmElevationButton"                android:fontFamily="@font/cairo_black"                android:paddingStart="@dimen/dmPaddingStartButtonRegister"                android:paddingEnd="@dimen/dmPaddingEndButtonRegister"                android:text="@string/strRegisterTeacher"                android:textColor="@color/colorPrimary"                android:textSize="@dimen/dmTextSizeButton" />        </RelativeLayout>    </androidx.constraintlayout.widget.ConstraintLayout></ScrollView>