<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:fillViewport="true"    tools:context=".ui.auth.login.teacher.RegisterTeacherFragment">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1.5"            android:background="@drawable/bg_register_student_teacher">            <RelativeLayout                android:id="@+id/relativeRegisterStudentNameCollage"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_alignParentStart="true"                android:layout_alignParentTop="true"                android:layout_alignParentEnd="true"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd">                <TextView                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_centerInParent="true"                    android:fontFamily="@font/cairo_black"                    android:text="@string/strNameCollage"                    android:textColor="@color/colorWhite"                    android:textSize="@dimen/dmTextSizeTitleRegisterTeacher" />                <ImageButton                    android:id="@+id/btnRegisterTeacherBack"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignParentStart="true"                    android:layout_centerInParent="true"                    android:background="@drawable/ic_back"                    android:elevation="@dimen/dmElevationButton" />            </RelativeLayout>            <TextView                android:id="@+id/textView"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/relativeRegisterStudentNameCollage"                android:layout_centerHorizontal="true"                android:layout_marginBottom="@dimen/dmMarginBottomTextTitleRegisterTeacher"                android:fontFamily="@font/cairo_black"                android:text="@string/strNameApp"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeTitleRegisterTeacher" />            <ImageView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@+id/textView"                android:layout_alignParentEnd="true"                android:layout_alignParentBottom="true"                android:adjustViewBounds="true"                android:paddingEnd="30dp"                android:scaleType="fitEnd"                android:src="@drawable/ic_man" />        </RelativeLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="vertical">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="start"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd"                android:layout_marginBottom="@dimen/dmMarginBottom"                android:fontFamily="@font/cairo_bold"                android:text="@string/strRegisterTeacher"                android:textColor="@color/colorPurpleText"                android:textSize="@dimen/dmTextSizeTitleRegisterTeacher" />            <RelativeLayout                android:layout_width="match_parent"                android:layout_height="wrap_content">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content">                    <Spinner                        android:id="@+id/spinnerRegisterTeacherName"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_marginStart="@dimen/dmMarginStart"                        android:layout_marginEnd="@dimen/dmMarginEnd"                        android:layout_marginTop="@dimen/dmHalfMarginTop"                        android:layout_marginBottom="@dimen/dmHalfMarginBottom"                        android:background="@drawable/bg_spinner_down"                        android:elevation="@dimen/dmElevationSpinner"                        android:fontFamily="@font/cairo_regular"                        android:paddingStart="@dimen/dmPaddingStartRegisterTeacherEditText"                        android:paddingEnd="@dimen/dmPaddingEndRegisterTeacherEditText" />                </RelativeLayout>                <com.wang.avi.AVLoadingIndicatorView                    android:id="@+id/aviRegisterTeacherSpinner"                    android:layout_width="@dimen/dmAviWidthSpinner"                    android:layout_height="@dimen/dmAviHeightSpinner"                    android:visibility="gone"                    tools:visibility="visible"                    android:layout_centerVertical="true"                    android:layout_marginStart="@dimen/dmMarginStartSpinner"                    app:indicatorColor="@color/colorPrimary"                    app:indicatorName="BallSpinFadeLoaderIndicator" />                <TextView                    android:id="@+id/txtRegisterTeacherSpinner"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:text="لا يوجد استاذة"                    tools:visibility="visible"                    android:textColor="@color/colorPrimary"                    android:textSize="@dimen/dmTextSizeSpinner"                    android:visibility="gone"                    android:fontFamily="@font/cairo_regular"                    android:layout_marginStart="@dimen/dmMarginStartSpinner"                    android:layout_centerVertical="true"/>            </RelativeLayout>            <RelativeLayout                android:layout_width="match_parent"                android:layout_height="wrap_content">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="wrap_content">                    <EditText                        android:id="@+id/edtRegisterTeacherPassword"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_centerVertical="true"                        android:layout_marginStart="@dimen/dmMarginStart"                        android:layout_marginEnd="@dimen/dmMarginEnd"                        android:layout_marginBottom="@dimen/dmMarginBottom"                        android:background="@drawable/bg_edit_text_border"                        android:elevation="@dimen/dmElevationEditText"                        android:fontFamily="@font/cairo_regular"                        android:gravity="right|center_vertical"                        android:hint="@string/strPassword"                        android:inputType="textWebPassword"                        android:paddingStart="@dimen/dmPaddingStartRegisterTeacherEditText"                        android:paddingEnd="@dimen/dmPaddingEndRegisterTeacherEditText" />                </RelativeLayout>                <ImageButton                    android:id="@+id/imgRegisterTeacherShowPassword"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_alignParentEnd="true"                    android:layout_centerVertical="true"                    android:layout_marginEnd="30dp"                    android:background="@drawable/ic_visibility_off" />            </RelativeLayout>            <Button                android:id="@+id/btnRegisterTeacherLogin"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="@dimen/dmMarginStart"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginEnd="@dimen/dmMarginEnd"                android:background="@drawable/bg_button_sign_in_purple"                android:elevation="@dimen/dmElevationButton"                android:fontFamily="@font/cairo_bold"                android:text="@string/strRegister"                android:textColor="@color/colorWhite"                android:textSize="@dimen/dmTextSizeButton" />            <com.wang.avi.AVLoadingIndicatorView                android:id="@+id/aviRegisterTeacher"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="center_horizontal"                android:layout_marginTop="@dimen/dmMarginTop"                android:layout_marginBottom="@dimen/dmMarginBottom"                android:visibility="gone"                app:indicatorColor="@color/colorPrimary"                app:indicatorName="BallSpinFadeLoaderIndicator" />        </LinearLayout>    </LinearLayout></ScrollView>